--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,12 @@
-<!DO
+<!DOCTYPE html>
+<html Lang="pt-br">
+<head>
+<meta charset="UTF-8">
+<title>sou foda</title>
+</head>
+<body>
+<h1>pão</h1>
+
+
+</body>
+</html>
