Atualizar o Index.html

--- a/Index.html
+++ b/Index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html Lang="pt-br">
-<head>
-<meta charset="UTF-8">
-<title>sou foda</title>
-</head>
-<body>
-<h1>pão</h1>
-<hr>
+<html>
+ <html Lang="pt-br">
+   <head>
+    <meta charset="UTF-8">
+     <title>sou foda</title>
+   </head>
+ <body>
+  <h1>pão</h1>
+   <hr>
 
 
-</body>
+ </body>
 </html>
