Atualizar o Index.html

--- a/Index.html
+++ b/Index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
-<html Lang="pt-br">
-<head>
-<meta charset="UTF-8">
-<title>sou foda</title>
-</head>
-<body>
-<h1>pão</h1>
-<hr>
+<html>
+ <html leng="pt-be">
+  <head>
+   <meta charset="UTF-8">
+   <title>olá, mundo</title>
 
+</head>
+<bady>
+ 
 
 </body>
+
+
+
+
+
 </html>
