Atualizar o Index.html

--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html>
- <html leng="pt-be">
+ <html leng="pt-br">
   <head>
    <meta charset="UTF-8">
    <title>olá, mundo</title>
