Atualizar o Index.htmlmm

--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,16 @@
+<!DOCTYPE html>
+ <html lenga="pt-bt">
+<Head>
+ <meta charset="UTF-8">
+  <meta name="viwport"content="width devicewdth,initial-scale=1.0>
+   <title>mm1</title>
 
+</Head>
+<body>
+ <h1>olá, mundo</h1>
+  <hr>
+   <p>sou godr</p>
+
+</body>
+  
+</html>
